Dependency management update
- including dependencies to pom.xml files only where they are used,
avoiding extra dependencies being added in all packages.

Issue-ID: POLICY-4945
Change-Id: I85b18befe3fe2877c754b1ac818d1b4994f9f7f9
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>